Added RMarkdown templates

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,8 @@ website:
     left:
       - href: index.qmd
         text: Home
+      - href: 00-intro.qmd
+        text: Introduction
       - about.qmd
 
 format:
