Replace Rmd with qmd

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,8 +9,20 @@ website:
         text: Home
       - href: 00-intro.qmd
         text: Introduction
-      - about.qmd
-
+      - href: 01-start.qmd
+        text: Getting Started
+      - href: 02-filesystem.qmd
+        text: Filesystem
+      - href: 03-files.qmd
+        text: Files
+      - href: 04-processes.qmd
+        text: Processes
+      - href: 05-analysis.qmd
+        text: Analysis
+      - href: 06-scripts.qmd
+        text: Scripts
+        
+      
 format:
   html:
     theme: cosmo
